# tetherai-python

./: CONTRIBUTING.md  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  publish.yml
examples/: basic_budget.py  crewai_budget_kill.py  crewai_debug.py
src/tetherai/: __init__.py  budget.py  circuit_breaker.py  config.py  exceptions.py  exporter.py  interceptor.py  pricing.py  token_counter.py  trace.py
src/tetherai/crewai/: __init__.py  integration.py
tests/integration/: test_placeholder.py
tests/unit/: test_budget.py  test_circuit_breaker.py  test_config.py  test_crewai_integration.py  test_exceptions.py  test_exporter.py  test_interceptor.py  test_pricing.py  test_token_counter.py  test_trace.py
